--- a/release/t/taichow/source/welcome.htm
+++ b/release/t/taichow/source/welcome.htm
@@ -2,57 +2,324 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Start Using wenchow</title>
+  <title>Start Using taichow</title>
   <style type="text/css">
     p { font: 16pt Tahoma; }
     h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
     h2 { font: bold 16pt Tahoma; color: #4444cc; }
+    table {font-size: 16px;}
+    th {font-size: 20px;}
+    td {font-size: 20px;}
+    tr {font-size: 20px;}
+    a { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
+    .msg-ieioywrtant { color: rgb(238, 0, 0); background-color: rgb(255, 213, 213); border: 2px dashed rgb(238, 0, 0); padding: 8pt 16pt; margin: 8pt 0; display: inline-block; }
+    table {
+      border-collapse: collapse;
+    }
+    th, td {
+      border: 1px solid rgb(0, 0, 0);
+      padding: 5pt 10pt;
+    }
+    code {
+      border: 1px solid rgb(199, 199, 199);
+      border-radius: 3pt;
+      background: rgb(238, 238, 238);
+      padding: 1pt 2pt;
+    }
   </style>
 </head>
 <body>
 
-<h1>Start Using taichow開始使用台州蘇州寧波吳越語羅馬字輸入法</h1>
+<h1>Start Using taichow台州蘇州寧波吳越語羅馬字輸入法Ng-Yüih-Nyǘ Lo-mố-z̀ shü-jeh-făh</h1>
 
 <p>
-    taichow keyboard for romanized goetian Ng-Yüih-Nyü
+    taichow keyboard for romanized goetian Ng-Yüih-Nyǘ
 </p>
 <p>
     台州蘇州寧波吳越語羅馬字輸入法
 </p>
 <p> typing specific letters by doubletapping and combination 雙擊咾字母組合輸入特殊字母</p>
 <p> examples: oo > ô, oe > ö, uu > ü, ae > æ, aw > ă, aa > ă, uw > ŭ </p>
+<table>
+  <tbody>
+  <tr>
+    <th>Character</th>
+    <th>Key pressed</th>
+    <th>Sample input</th>
+    <th>Sample output</th>
+  </tr>
+  <tr>
+    <td>æ</td>
+    <td>ae</td>
+    <td>ka<strong>e</strong></td>
+    <td>kæ改</td>
+  </tr>
+  <tr>
+    <td>ă</td>
+    <td>aw</td>
+    <td>fa<strong>w</strong>h</td>
+    <td>făh法</td>
+  </tr>
+  <tr>
+    <td>ô</td>
+    <td>oo</td>
+    <td>mo<strong>o</strong></td>
+    <td>mô馬</td>
+  </tr>
+  <tr>
+      <td>ö</td>
+      <td>oe</td>
+      <td>do<strong>e</strong>n</td>
+      <td>dön團</td>
+  </tr>
+  <tr>
+    <td>ü</td>
+    <td>uu</td>
+    <td>lu<strong>u</strong></td>
+    <td>lü旅</td>
+  </tr>
+  <tr>
+    <td>ŭ</td>
+    <td>uw</td>
+    <td>su<strong>w</strong></td>
+    <td>sŭ水</td>
+  </tr>
+  </tbody>
+</table>
 <p> adding aspiration marks "‛" by adding h after consonants 垃拉輔音後頭輸入h字母，添加送氣音符號"‛"</p>
-<p> examples: ph > p‛, th > t‛, kh > k‛, tsh > ts‛, ch > c‛, kwh > kw‛, hh > ‛, kyh > ky‛, kwh > kw‛, khy > ky‛, khw > kw‛， gh > ‛ </p>
+<p> examples: ph > p‛, th > t‛, kh > k‛, tsh > ts‛, ch > c‛, kwh > kw‛, gh > ‛, kyh > ky‛, kwh > kw‛, khy > ky‛, khw > kw‛， gh > ‛ </p>
 <p> Typing 'gh', to generate voiced sound h "‛", 輸入gh，產生濁音h "‛"</p>
 <p> examples: gh > ‛ </p>
 <p> Typing 'h' after 'l''m''n', to generate voiced sound 'l̆''m̆''ň', 垃拉輔音lmn後頭輸入h，產生濁音"l̆""m̆""ň"</p>
 <p> examples: lh > l̆, mh > m̆, nh > n̆ </p>
 <p> Typing 'w' twice, to generate un-voiced sound 'w̆', 雙擊w，產生清音"w̆"</p>
 <p> examples: ww > w̆ </p>
-<p> typing rising and falling tone marks by adding "r" "q" and "x" 通過添加字母r、q咾x輸入上聲咾去聲音調符號 </p>
-<p> examples: aq > á, ax > à. </p>
+
+<table>
+  <tbody>
+  <tr>
+    <th>Character</th>
+    <th>Key pressed</th>
+    <th>Sample input</th>
+    <th>Sample output</th>
+  </tr>
+  <tr>
+    <td>pʽ</td>
+    <td>ph</td>
+    <td>p<strong>h</strong>i</td>
+    <td>pʽi批</td>
+  </tr>
+  <tr>
+    <td>tʽ</td>
+    <td>th</td>
+    <td>t<strong>h</strong>eh</td>
+    <td>tʽeh脫</td>
+  </tr>
+  <tr>
+    <td>kʽ</td>
+    <td>kh</td>
+    <td>k<strong>h</strong>u</td>
+    <td>kʽu枯</td>
+  </tr>
+  <tr>
+      <td>tsʽ</td>
+      <td>tsh</td>
+      <td>ts<strong>h</strong>a</td>
+      <td>tsʽa蔡</td>
+  </tr>
+  <tr>
+    <td>cʽ</td>
+    <td>ch</td>
+    <td>c<strong>h</strong>oo</td>
+    <td>cʽô車</td>
+  </tr>
+  <tr>
+    <td>ʽ</td>
+    <td>gh</td>
+    <td><strong>ʽ</strong>a</td>
+    <td>ʽa鞋</td>
+  </tr>
+  <tr>
+    <td>kyʽ</td>
+    <td>kyh/khi/khy</td>
+    <td>ky<strong>h</strong>ih</td>
+    <td>kyʽih喫</td>
+  </tr>
+  <tr>
+    <td>kwʽ</td>
+    <td>kwh/khu/khw</td>
+    <td>kw<strong>h</strong>a</td>
+    <td>kwʽa誇</td>
+  </tr>
+  <tr>
+    <td>l̆</td>
+    <td>ll/lh</td>
+    <td>l<strong>l</strong>a</td>
+    <td>l̆a拉</td>
+  </tr>
+  <tr>
+    <td>m̆</td>
+    <td>mm/mh</td>
+    <td>m<strong>m</strong>a</td>
+    <td>m̆a媽</td>
+  </tr>
+  <tr>
+    <td>n̆</td>
+    <td>nn/nh</td>
+    <td>n<strong>n</strong>a</td>
+    <td>n̆a那</td>
+  </tr>
+  <tr>
+    <td>w̆</td>
+    <td>ww/u-</td>
+    <td>w<strong>w</strong>ah</td>
+    <td>w̆ah挖</td>
+  </tr>
+  </tbody>
+</table>
+
+<p> typing rising and falling tone marks by typing "r" and "x" keys 通過添加字母r咾x輸入上聲咾去聲音調符號 </p>
+<p><b>examples例子</b></p>
+<table>
+  <tbody>
+    <tr>
+      <th>Tone</th>
+      <th>Keys added to syllable</th>
+      <th>Sample input</th>
+      <th>Sample output
+      </th>
+    </tr>
+    <tr>
+      <td>level tone平聲</td>
+      <td>nothing</td>
+      <td>kao</td>
+      <td>kao高</td>
+    </tr>
+    <tr>
+      <td>rising tone上聲</td>
+      <td>r</td>
+      <td>hao<strong>r</strong></td>
+      <td>háo好
+      </td>
+    </tr>
+    <tr>
+      <td>falling tone去聲</td>
+      <td>x</td>
+      <td>pao<strong>x</strong></td>
+      <td>pào報
+      </td>
+    </tr>
+  </tbody>
+</table>
 <p> automatically generate ông and w̆ by typing in Wu association romanization 使用吳語協會拼音輸入方式，自動產生ông咾w̆ </p>
 <p> examples: aon > ông, ua > w̆a. </p>
 <p> automatically predict “yi” combinatiön 自動預知“yi”搭配 </p>
-<p> examples: ki > kyi, ni > nyi, ya > yia. </p>
-<p> cancelling letter tranformation and tone marks by typing the tranformation key again</p>
+<p> examples: ki > kyi, ni > nyi. </p>
+
+<p>
+  If more than one tone marking key is pressed, the last one will be used. For example, typing <code>arx</code> will return "à". </p>
+<p>  To write a tone marking key as a normal character, one has to press it twice: <code>her</code> becomes <code>hé</code>, while <code>herr</code> becomes <code>her</code>.
+</p>
 <p> 再撳一記轉化鍵，取消字母轉化咾音調符號 </p>
 <p> examples: aqq > aq, axx > ax, ooo > oo. </p>
 <!-- <p>See <a href="file:taigi_poj.pdf">this document</a> for all the key combinations.</p> -->
-<h1>phonology of taichownese台州話音韻表</h1>
+<h1>phonology of Goetian 吳越語音韻表</h1>
 
-<p><b>consonant輔音</b></p>
-<img src='consonant.png' alt='phonology'>
-<p><b>vowel元音</b></p>
-<img src='vowel1.png' alt='phonology'>
-<p>
-<img src='vowel2.png' alt='phonology'>
-</p>
-<p>
-<img src='vowel3.png' alt='phonology'>
-</p>
-<p><b>Ningbo Romanization Dictionary寧波羅馬字字典</b></p>
-<p> https://github.com/ionkaon/rime-old-nyingpo/blob/master/old_nyingpo.dict.yaml </p>
+<p><b>consonants輔音</b></p>
+<table>
+  <tr>
+    <th>羅馬字</th>
+    <th>國際音標</th>
+    <th>例字</th>
+  </tr>
+  <tr><td>p</td><td>[p]</td><td>百班冰包</td></tr>
+  <tr><td>p‘</td><td>[pʰ]</td><td>拍派拼泡</td></tr>
+  <tr><td>b</td><td>[b]</td><td>白排病剖</td></tr>
+  <tr><td>m</td><td>[m]</td><td>麥買命描</td></tr>
+  <tr><td>f</td><td>[f]</td><td>弗反風飞</td></tr>
+  <tr><td>v</td><td>[v]</td><td>佛飯筏</td></tr>
+  <tr><td>t</td><td>[t]</td><td>搭单東刀</td></tr>
+  <tr><td>t‘</td><td>[tʰ]</td><td>塔塘通討</td></tr>
+  <tr><td>d</td><td>[d]</td><td>達談動逃</td></tr>
+  <tr><td>n</td><td>[n]</td><td>塔嫩農腦</td></tr>
+  <tr><td>l</td><td>[l]</td><td>辣懒弄老</td></tr>
+  <tr><td>k</td><td>[k]</td><td>格公告干</td></tr>
+  <tr><td>k‘</td><td>[kʰ]</td><td>客空考看</td></tr>
+  <tr><td>g</td><td>[g]</td><td>鎅茄</td></tr>
+  <tr><td>ng</td><td>[ŋ]</td><td>我牙咬</td></tr>
+  <tr><td>h</td><td>[h]</td><td>好虎海漢</td></tr>
+  <tr><td>‘</td><td>[ʔ]</td><td>号昔寒何</td></tr>
+  <tr><td>ky</td><td>[c]</td><td>舉寫記吉</td></tr>
+  <tr><td>ky‘</td><td>[cʰ]</td><td>區氣喫</td></tr>
+  <tr><td>gy</td><td>[ɟ]</td><td>巨共奇傑</td></tr>
+  <tr><td>ny</td><td>[ɲ]</td><td>日念人繞</td></tr>
+  <tr><td>hy</td><td>[ç]</td><td>興常皓休</td></tr>
+  <tr><td>y</td><td>[j]</td><td>陽明園有</td></tr>
+  <tr><td>kw</td><td>[kʷ]</td><td>光怪官古</td></tr>
+  <tr><td>kw‘</td><td>[kʰʷ]</td><td>礦快款庫</td></tr>
+  <tr><td>gw</td><td>[gʷ]</td><td>狂跍</td></tr>
+  <tr><td>ngw</td><td>[ŋʷ]</td><td>誤悟</td></tr>
+  <tr><td>hw</td><td>[hʷ]</td><td>慌花歡虎</td></tr>
+  <tr><td>w</td><td>[w]</td><td>華會活還</td></tr>
+  <tr><td>w̆</td><td>[u]</td><td>挖娃</td></tr>
+  <tr><td>ts</td><td>[ts]</td><td>摘子早羞</td></tr>
+  <tr><td>ts‘</td><td>[tsʰ]</td><td>測此草蔡</td></tr>
+  <tr><td>dz</td><td>[dz]</td><td>澤治查丈</td></tr>
+  <tr><td>s</td><td>[s]</td><td>色思舍洒</td></tr>
+  <tr><td>z</td><td>[z]</td><td>賊字蛇柴</td></tr>
+  <tr><td>c</td><td>[tɕ]</td><td>珠轉種祝</td></tr>
+  <tr><td>c‘</td><td>[tɕʰ]</td><td>取穿充去</td></tr>
+  <tr><td>dj</td><td>[dʑ]</td><td>佳傳酒</td></tr>
+  <tr><td>sh</td><td>[ɕ]</td><td>水選松宿</td></tr>
+  <tr><td>j/zh</td><td>[ʑ]</td><td>樹旋從属</td></tr>
+  <tr><td>/</td><td>[∅]</td><td>烏音愛安</td></tr>
+</table>
+<p><b>vowels元音</b></p>
+<table>
+  <tr>
+    <th></th>
+    <th>i列</th>
+    <th>u列</th>
+    <th>ü列</th>
+  </tr>
+  <tr><td>a 阿</td><td>ia 耶</td><td>wa 壞</td><td>–</td></tr>
+  <tr><td>e 最</td><td>–</td><td>we 爲</td><td>–</td></tr>
+  <tr><td>æ 愛</td><td>iæ 且</td><td>–</td><td>–</td></tr>
+  <tr><td>ô 話</td><td>iô [i̯ɔ]</td><td>–</td><td>üô 訝嘉（文讀）</td></tr>
+  <tr><td>u 烏</td><td>iu/ieu 有</td><td>wu 和</td><td>–</td></tr>
+  <tr><td>ao 奧</td><td>iao 要</td><td>–</td><td>–</td></tr>
+  <tr><td>eu/eo 歐</td><td>–</td><td>–</td><td>–</td></tr>
+  <tr><td>an/æn 咸</td><td>ian/iæn 廿</td><td>wan/wæn 還</td><td>ön 團</td></tr>
+  <tr><td>en 看干</td><td>ien/in 煙</td><td>wön/wun 完</td><td>ön/ün 遠</td></tr>
+  <tr><td>ü/ŭ珠</td><td>i 衣</td><td>o 過</td><td>ü 雨</td></tr>
+  <tr><td>ang 櫻 </td><td>iang 央</td><td>wang 橫</td><td>–</td></tr>
+  <tr><td>ông 盎</td><td>–</td><td>wông 黃</td><td>iông/üông 江（文讀）</td></tr>
+  <tr><td>ong 翁</td><td>–</td><td>–</td><td>iong/üong 永</td></tr>
+  <tr><td>eng 恩</td><td>ing 英</td><td>weng 溫</td><td>üing 運</td></tr>
+  <tr><td>ăh/æh 鴨壓</td><td>–</td><td>–</td><td>üh [yʔ]</td></tr>
+  <tr><td>ah 白麥</td><td>iah 約</td><td>wah 滑</td><td>–</td></tr>
+  <tr><td>eh 割个</td><td>ih 一筆</td><td>weh 活</td><td>üih 越</td></tr>
+  <tr><td>ôh 各殼</td><td>–</td><td>–</td><td>iôh/üôh 郁覺（文讀）</td></tr>
+  <tr><td>oh 六哭</td><td>–</td><td>–</td><td>ioh/üoh 浴玉</td></tr>
+</table>
+
+<h2>vocalic consonant聲化韵</h2>
+<table>
+  <tr>
+    <td>r 而兒</td>
+    <td>m 嘸</td>
+    <td>n 爾</td>
+    <td>ng 五</td>
+    <td>ts 子</td>
+    <td>tsʽ 次</td>
+    <td>s 四</td>
+    <td>dz 磁</td>
+    <td>z 士</td>
+  </tr>
+</table>
+<p></p>
+<a href="https://github.com/ionkaon/rime-old-nyingpo/blob/master/old_nyingpo.dict.yaml">Liampo Romanization Dictionary寧波羅馬字字典</a>
+
 <h1>Keyboard Layout</h1>
 
 <p><b>Unshifted</b></p>
@@ -63,7 +330,7 @@
 
 
 
-<p>© 2024 cathaylab</p>
+<p>© cathaylab</p>
 
 </body>
 </html>
