--- a/release/d/dazaga_gourane_karra/source/welcome.htm
+++ b/release/d/dazaga_gourane_karra/source/welcome.htm
@@ -25,7 +25,7 @@
 
 <h2>The smartphone keyboard</h2>
 
-<p><a href="help/phone.jpg"><img class="keyboard" width="300" height=auto src="help/phone.jpg"/></a></p>
+<p><a href="phone.jpg"><img class="keyboard" width="300" height=auto src="phone.jpg"/></a></p>
 
 <h2>Usage on physical keyboards</h2>
 
@@ -67,7 +67,7 @@
 
 <h2>Die Handy-Tastatur</h2>
 
-<p><a href="help/phone.jpg"><img class="keyboard" width="300" height=auto src="help/phone.jpg"/></a></p>
+<p><a href="phone.jpg"><img class="keyboard" width="300" height=auto src="phone.jpg"/></a></p>
 
 <h2>Verwendung für physische Tastaturen</h2>
 
