[beria_erfe_phonetic] Add mobile layout

--- a/experimental/b/beria_erfe_phonetic/source/welcome/welcome.htm
+++ b/experimental/b/beria_erfe_phonetic/source/welcome/welcome.htm
@@ -15,10 +15,8 @@
 <h1>Start Using Beria Erfe Phonetic</h1>
 
 <p>
-  This is a phonetic-based keyboard designed for the Zaghawa Beria language using the Beria Erfe script. Beria Erfe is not yet in Unicode.
+  This is a phonetic-based keyboard designed for the Zaghawa Beria language using the Beria Erfe script. Beria Erfe will be included in Unicode 17.0.
 </p>
-
-<p><em>The Beria Erfe script has received <a href="https://www.unicode.org/alloc/Pipeline.html">provisional codepoint assignments</a> by the Unicode Technical Committee. The script has not yet been formally accepted and approved for a future version of the Unicode Standard. The Kedebideri font, and this keyboard, are using the provisional codepoints, but those codepoints can always change. Should those codepoints change, the font <em>and keyboard</em> would be re-released with the new encoding. Documents would then need converting to use the new codepoints.</em></p>
 
 <h2>Desktop Keyboard layout</h2>
 <h3>Default (unshifted)</h3>
