63 - Kanuri Ǝ, double overdot, docs
Added Kanuri ǝƎ (from Q key), and double overdot for tone (esp with i), and updated docs. Also turns off ꜱᴍᴀʟʟ ᴄᴀᴘꜱ ᴍᴏᴅᴇ on backspace in case people trigger it accidentally.

--- a/experimental/n/naijatype/source/naijatype-help.htm
+++ b/experimental/n/naijatype/source/naijatype-help.htm
@@ -1,5 +1,5 @@
-<h1 style="font-family: Andika, Andika Afr; font-size: 200%">Naija Type</h1>
-<div style="font-family: Andika, Andika Afr; font-size: 150%">
+<h1 class="naijatype" style="font-family: Andika, Andika Afr; font-size: 120%">Naija Type</h1>
+<div style="font-family: Andika, Andika Afr; font-size: 100%">
 <p>The Naija Type keyboard aims to serve all Nigerian languages, not just Hausa, Yoruba and Igbo, supplying the standard characters normally recommended for each script.
 </p>
 <p>Please write to keyboards@m.rowbory.co.uk if you need letters that are not provided here.</p>
@@ -24,10 +24,11 @@
 <li>Double press space bar to get a full stop followed by a space. </li>
 <li>Double press apostrophe to get a saltillo character (like an apostrophe, but word-forming and not turned into curly quotes by word-processors). Shift-apostrophe-apostrophe to get the capital version. ? then ; rotates through ¿ and then the modifier letter vertical line which is also sometimes used for a caseless glottal.
 </li>
+<li>Double press = to begin typing in ꜱᴍᴀʟʟ ᴄᴀᴘꜱ and double press = again to stop. This is useful when you need grammatical glosses or other small caps and the software you are using doesn't support small caps by styles. It uses different Unicode values.</li>
 <li>Underdot alternative: type main letter then ALT-FullStop, (Overdot with ALT-SHIFT-FullStop)
 </li>
 <li>Underline alternative: type letter then ALT-SHIFT-HYPHEN (overline with ALT-Hyphen)
 </li>
 <li>Vertical line above alternative: type letter then ALT-Backslash.
 </li></ul></li></ul>
-<h3>Version 62</h3>
+<h3>Version 63</h3>
