--- a/release/h/horami/source/readme.htm
+++ b/release/h/horami/source/readme.htm
@@ -16,7 +16,7 @@
 
 <p> This keyboard is for use by the Horami language
 </p>
-<p>Copyright 2024-2025 SIL Global</p>
+<p>Copyright SIL Global</p>
 <p>MIT License</p>
 </body>
 </html>
