[sil_shan] readd U+1037 and update description

--- a/release/sil/sil_shan/source/readme.htm
+++ b/release/sil/sil_shan/source/readme.htm
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>Shan (SIL) Keyboard</h1>
-    <p>Shan 'standard' keyboard layout as per Shan Institute for Information Technology layout.</p>
+    <p>Shan 'standard' keyboard layout as per Shan Institute for Information Technology layout. This keyboard conforms to the 2025-May-19 Shan Standard keyboard update as announced here: https://shaniit.org/events/shan_standard_keyboard_update_announcement</p>
   </body>
 </html>
