[andika] Update keyboards using Andika to new version

--- a/experimental/n/naijatype/source/naijatype-help.htm
+++ b/experimental/n/naijatype/source/naijatype-help.htm
@@ -1,14 +1,14 @@
 <h2>On touch (phones/tablets)</h2>
 <ul>
-    <li>Press and hold a key for alternate characters similar to the letter you press. Then move your finger over to highlight the letter you want and release.</li>
-    <li>For most punctuation press and hold the . (full stop / period) key or the comma key on the left of the keyboard.</li>
-    <li>Q, V and space contain combining symbols to add on top of the previous letter typed, so you can type o then hold on Q to choose the underline or underdot or an accent above.</li>
-    <li>Flick DOWN on the top row to get a digit. </li>
-    <li>Flick from a vowel UP-RIGHT to get the vowel with acute accent and DOWN-RIGHT to get the grave accent.</li>
-    <li>Flick DOWN on b, d, k for the hooked version.</li>
-    <li>Flick UP on the vowels to get their most common alternate shape.</li>
-    <li>Flick LEFT and RIGHT on the space bar to get underscore and hyphen. UP to get a non-breaking space.</li>
-    <li>Triple-tap vowels to get the underdot version, or type a vowel and then double-tap full stop to get an underdot.</li>
+<li>Press and hold a key for alternate characters similar to the letter you press. Then move your finger over to highlight the letter you want and release.</li>
+<li>For most punctuation press and hold the . (full stop / period) key or the comma key on the left of the keyboard.</li>
+<li>Q, V and space contain combining symbols to add on top of the previous letter typed, so you can type o then hold on Q to choose the underline or underdot or an accent above.</li>
+<li>Flick DOWN on the top row to get a digit. </li>
+<li>Flick from a vowel UP-RIGHT to get the vowel with acute accent and DOWN-RIGHT to get the grave accent.</li>
+<li> Flick DOWN on b, d, k for the hooked version.</li>
+<li>Flick UP on the vowels to get their most common alternate shape.</li>
+<li>Flick LEFT and RIGHT on the space bar to get underscore and hyphen. UP to get a non-breaking space.</li>
+<li>Triple-tap vowels to get the underdot version, or type a vowel and then double-tap full stop to get an underdot.</li>
 </ul>
 
 <h2>On a computer with physical keyboard</h2>
@@ -27,6 +27,7 @@
     <li>Try ctrl-alt (on a Mac option or ctrl-option) then a letter to get a variation shape, eg ctrl-alt-e = ɛ.</li>
     <li>Double press space bar to get a full stop followed by a space. </li>
     <li>Double press apostrophe to get a saltillo character (like an apostrophe, but word-forming and not turned into curly quotes by word-processors). Shift-apostrophe-apostrophe to get the capital version. ? then ; rotates through ¿ and then the modifier letter vertical line which is also sometimes used for a caseless glottal.</li>
+    <li>Double press = to begin typing in ꜱᴍᴀʟʟ ᴄᴀᴘꜱ and double press = again to stop. This is useful when you need grammatical glosses or other small caps and the software you are using doesn't support small caps by styles. It uses different Unicode values.</li>
     <li>Underdot alternative: type main letter then ALT-FullStop, (Overdot with ALT-SHIFT-FullStop)</li>
     <li>Underline alternative: type letter then ALT-SHIFT-HYPHEN (overline with ALT-Hyphen)</li>
     <li>Vertical line above alternative: type letter then ALT-Backslash.</li>
