--- a/experimental/n/naijatype/source/readme.htm
+++ b/experimental/n/naijatype/source/readme.htm
@@ -4,24 +4,25 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Naija Type</title>
-  <style type="text/css">
-    p { font: 10pt Tahoma; }
-    h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
-    h2 { font: bold 12pt Tahoma; color: #4444cc; }
-  </style>
+	<style type="text/css">
+		p { margin-bottom: 0.21cm; direction: inherit; background: transparent }
+		p.western { font-family: Andika,sans-serif,"Andika Afr","AndikaAfr","Andika"; font-size: 150%; }
+		a:link { color: #000080; so-language: zxx; text-decoration: underline }
+		a:visited { color: #800000; so-language: zxx; text-decoration: underline }
+        h1 { font-size: 200%; }
+	</style>
 </head>
-<body>
-	<h1>Naija Type</h1>
-
-	<p>
-		Type every Nigerian language correctly on phones, tablets, iPads and systems. This keyboard helps you type the special letters (əɛɨʊɔŋɗɓƙ, ụndẹrdọts, u̱nde̱rli̱ne̱s) used in Nigerian orthographies and also the ₦aira sign. On touch you access special letters through a long press and on Windows/Mac/Linux by typing a modifier key to transform the previous shape, rather than using deadkeys. Keep pressing the same modifier key to change through several shape options, making it easy to learn and use.
-	</p>
-
-	<p>
-		On desktop type the key closest to the symbol you want (a for ə or a̠, e for ɛ or ẹ etc) and then type the semicolon key. Keep typing semicolon to switch between different symbols.
-After typing the base letter if you want a diacritic (tone mark or nasal) above the letter then type the top left 'back tick' key. For a nasal hold down shift as you type this.</p>
-<p>
-	On touch devices, press and hold down a key to see alternatives. For diacritics press and hold on the 'q' key at the top left.
+<body lang="en-GB" link="#000080" vlink="#800000" dir="ltr"><h1>Naija Type – Read Me</h1>
+<p class="western">
+Type every Nigerian language correctly on phones, tablets, iPads and systems. This keyboard helps you type the special letters (əɛɨʊɔŋɗɓƙ, ụndẹrdọts, u̱nde̱rli̱ne̱s) used in <a href="https://docs.google.com/spreadsheets/d/1kfAhdFYJuiEYa2qJPDsvi7NaVZIOVOkMkpLbWQoPQ9g">Nigerian orthographies</a> and also the ₦aira sign. On touch you access special letters through a long press and on Windows/Mac/Linux by typing a modifier key to transform the previous shape, rather than using deadkeys. Keep pressing the same modifier key to change through several shape options, making it easy to learn and use.
 </p>
+<p class="western">
+On desktop type the key closest to the symbol you want (a for ə or a̠, e for ɛ or ẹ etc) and then type the semicolon key. Keep typing semicolon to switch between different symbols.
+After typing the base letter if you want a diacritic (tone mark or nasal) above the letter then type the top left 'back tick' key. For a nasal hold down shift as you type this.</p>
+<p class="western">
+On touch devices, press and hold down a key to see alternatives. For diacritics press and hold on the 'q' key at the top left.
+</p>
+
+
 </body>
 </html>
