[doulos] Update keyboards using Doulos to new version

--- a/release/t/tlahuica/source/readme.htm
+++ b/release/t/tlahuica/source/readme.htm
@@ -14,8 +14,7 @@
 
 <h1>Teclado Tlahuica</h1>
 
-<p>
-    Pa wañɇ muweñjɇ pjyɇkakjo :) Versión 1.0. Uso libre.<br>
+<p>Pa wañɇ muweñjɇ pjyɇkakjo.<br>
 </p>
 
 </body>
