--- a/release/t/tlahuica/source/welcome/welcome.htm
+++ b/release/t/tlahuica/source/welcome/welcome.htm
@@ -15,7 +15,7 @@
 <h1>Teclado Tlahuica</h1>
 
 <p>
-    Pa wañɇ muweñjɇ pjyɇkakjo :) Versión 1.0.<br>Este teclado es de uso libre y puede redistribuirse gratuitamente.
+    Pa wañɇ muweñjɇ pjyɇkakjo.<br>Este teclado es de uso libre y puede redistribuirse gratuitamente.
 </p>
 
 <h1>Activar teclado para computadora</h1>
