--- a/release/sil/sil_mali_azerty/source/welcome/welcome.htm
+++ b/release/sil/sil_mali_azerty/source/welcome/welcome.htm
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css" type="text/css" />                             
 	<script src="keyrenderer.js" type="text/javascript"></script>
 	<style type="text/css">
-	.lang2,.languageExample {font-family:"Charis SIL Mali"; color:blue}
+	.lang2,.languageExample {font-family:"Charis Mali"; color:blue}
 	.lang2 {font-size:150%}
 	</style>
     <style type="text/css" media="print">
@@ -20,7 +20,7 @@
     <div id='help'>
         <h1>Clavier du Mali (Azerty) Keyboard</h1>
 
-        <p style='margin:0px'>Keyboard &#169; 2004-2022 SIL Mali</p>
+        <p style='margin:0px'>Keyboard &#169; SIL Mali</p>
 
 <div id='Overview'>
 <h2>Overview</h2>
@@ -774,7 +774,7 @@
 
 <h2>Fonts</h2>
 
-<p>The <a href="https://software.sil.org/charis/">Charis SIL Mali</a> font family is included with the keyboard package.</p>
+<p>The <a href="https://software.sil.org/charis/">Charis Mali</a> font family is included with the keyboard package.</p>
 
 <hr></hr>
 
