--- a/release/sil/sil_mali_qwertz/source/welcome/welcome.htm
+++ b/release/sil/sil_mali_qwertz/source/welcome/welcome.htm
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css" type="text/css" />                             
 	<script src="keyrenderer.js" type="text/javascript"></script>
 	<style type="text/css">
-	.lang2,.languageExample {font-family:"Charis SIL Mali"; color:blue}
+	.lang2,.languageExample {font-family:"Charis Mali"; color:blue}
 	.lang2 {font-size:150%}
 	</style>
     <style type="text/css" media="print">
@@ -282,7 +282,7 @@
 
 <h2>Fonts</h2>
 
-<p>The <a href="https://software.sil.org/charis/">Charis SIL Mali</a> font family is included with the keyboard package.</p>
+<p>The <a href="https://software.sil.org/charis/">Charis Mali</a> font family is included with the keyboard package.</p>
 
 <hr></hr>
 
