--- a/release/sil/sil_bwe_karen/source/readme.htm
+++ b/release/sil/sil_bwe_karen/source/readme.htm
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Bwe Karen (SIL) keyboard</title>
+  <title>Bwe Karen (SIL) Keyman keyboard</title>
   <style type="text/css">
     p { font: 10pt Tahoma; }
     h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-<h1>Bwe Karen (SIL) keyboardkeyboard</h1>
+<h1>Bwe Karen (SIL) Keyman keyboard</h1>
 
 <p>
 This keyboard follows the traditional QWERTY keyboard layout with the exception that it replaces two unused characters with combining diacritics.
