--- a/release/sil/sil_bwe_karen/source/welcome/welcome.htm
+++ b/release/sil/sil_bwe_karen/source/welcome/welcome.htm
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Bwe Karen (SIL) keyboard</title>
+  <title>Start Using Bwe Karen (SIL)</title>
   <style type="text/css">
     p { font: 10pt Tahoma; }
     h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
@@ -11,7 +11,7 @@
 </head>
     
 <body>
-<h1>Bwe Karen (SIL) keyboard for Keyman Desktop</h1>
+<h1>Start Using Bwe Karen (SIL)</h1>
 <html>
 
 <div class=WordSection1>
