[mingrelian_cyrillic] Added characters per user feedback

--- a/release/m/mingrelian_cyrillic/source/readme.htm
+++ b/release/m/mingrelian_cyrillic/source/readme.htm
@@ -14,7 +14,7 @@
 <h1>Mingrelian Cyrillic</h1>
 
 <p>
-    Mingrelian Cyrillic is a Cyrillic keyboard for the Mingrelian language in Georgia.
+    Mingrelian Cyrillic is a Cyrillic keyboard for the Mingrelian language in Abkhazia.
 </p>
 
 </body>
