--- a/release/m/mingrelian_cyrillic/source/welcome/welcome.htm
+++ b/release/m/mingrelian_cyrillic/source/welcome/welcome.htm
@@ -14,18 +14,17 @@
 <h1>Start Using Mingrelian Cyrillic</h1>
 
 <p>
-    Mingrelian Cyrillic is a Cyrillic keyboard for the Mingrelian language in Georgia.
+    Mingrelian Cyrillic is a Cyrillic keyboard for the Mingrelian language in Abkhazia.
 </p>
 
-<h1>Keyboard Layout</h1>
-
-  <h2>Desktop Keyboard layout</h2>
 	<h3>Default (unshifted)</h3>
-	<p><a href="mingrelian_cyrillicU_.png"><img class="keyboard" src="mingrelian_cyrillicU_.png" alt="Default (unshifted) state" /></a></p>
+	<p><a href="LayoutU_.png"><img class="keyboard" src="LayoutU_.png" alt="Default (unshifted) state" /></a></p>
 	<h3>Shift</h3>
-	<p><a href="mingrelian_cyrillicU_S.png"><img class="keyboard" src="mingrelian_cyrillicU_S.png" alt="Shift state" /></a></p>
-	<h3>Right ALT (shifted)</h3>
-	<p><a href="mingrelian_cyrillicU_SRA.png"><img class="keyboard" src="mingrelian_cyrillicU_SRA.png" alt="Right ALT Shift state" /></a></p>
+	<p><a href="LayoutU_S.png"><img class="keyboard" src="LayoutU_S.png" alt="Shift state" /></a></p>
+	<h3>Right ALT (unshifted)</h3>
+	<p><a href="LayoutU_RA.png"><img class="keyboard" src="LayoutU_RA.png" alt="Right ALT (unshifted) state" /></a></p>
+	<h3>Shift Right ALT</h3>
+	<p><a href="LayoutU_SRA.png"><img class="keyboard" src="LayoutU_SRA.png" alt="Shift Right ALT state" /></a></p>
 
 
 </body>
