--- a/release/c/cantonese_telex/source/welcome.htm
+++ b/release/c/cantonese_telex/source/welcome.htm
@@ -34,8 +34,8 @@
 </p>
 <p>粵語國語字係一種拉丁化嘅粵語文字，意在發展粵語表音文字，縮短粵文學習同書寫時間，增強粵語使用者之間嘅凝聚力同自我認同<p>
 <p>粵語國語字通用版本集合咗各種粵語口音嘅特點，形成咗一種能夠體現並且描述各種粵語口音嘅粵語表音文字，又減低咗同音字現象嘅影響，為唔同地區唔同口音嘅粵語使用者提供咗一種通用嘅書面文字<p> 
-  <p> Oạt Ngữ Quóc Ngữ Tị hạy yât chủng Lai-đinh phá ké Oạt Ngữ mần-tị, ý tọi phát chiển Oạt Ngữ biểu-yâm mần-tị, suc đoản Oạt Mần học-tập thùng sư-slẻ sị-can, tăng khường Oạt Ngữ sỉ-yụng-chẻ chi kan ké ngình-tụi-lịch thùng tị-ngõ nhịnh-thùng</p>
- <p>Oạt Ngữ Quóc Ngữ Tị Thung Yụng Bản Bổn tập hập chỏ cóc chủng Oạt Ngữ hẩu yâm ké đặc điểm, yình sình chỏ yât chủng nằng cấu thảy yiện bính xẻ miều sút cóc chủng Oạt Ngữ hẩu yâm ké Oạt Ngữ biểu yâm mần tị, yựu cảm đay chỏ thùng yâm xì ké yỉnh hưởng, ụy m̀ thùng đỵ khư m̀ thùng hẩu yâm ké Oạt Ngữ sỉ yụng chẻ thày cung chỏ yất chủng thung yụng ké sư miện mần tị
+  <p> Oạt-Ngữ Quóc-Ngữ-Tị hệ yât chủng Lai-đinh hóa ké Oạt Ngữ mần-tị, ý tọi phát chiển Oạt Ngữ biểu-yâm mần-tị, suc đoản Oạt Mần học-tập thùng sư-slẻ sị-kan, tăng-khường Oạt-Ngữ sỉ-yụng-chẻ chi-kan ké ngình-tụi-lịch thùng tị-ngõ nhịnh-thùng</p>
+ <p>Oạt-Ngữ Quóc-Ngữ-Tị Thung-Yụng Bản-Bổn tập-hập chỏ cóc-chủng Oạt-Ngữ hẩu-yâm ké đặc-điểm, yình-sình chỏ yât chủng nằng-cấu thể-yiện bính-xẻ miều-sút cóc-chủng Oạt-Ngữ hẩu-yâm ké Oạt-Ngữ biểu-yâm mần-tị, ựu kảm-đê chỏ thùng-yâm-xì ké yỉnh-hưởng, vỵ m̀ thùng đỵ-khư m̀ thùng hẩu-yâm ké Oạt-Ngữ sỉ-yụng-chẻ thề-cung chỏ yất chủng thung-yụng ké sư-miện mần-tị
   <p> Chữ Quốc Ngữ tiếng Quảng Đông là một loại chữ viết La-tinh hóa của tiếng Quảng Đông, nhằm mục đích phát triển chữ viết biểu âm của tiếng Quảng Đông, giảm bớt thời gian học và viết tiếng Quảng Đông, nâng cao sức hướng tâm và khẳng định căn cước của những người sử dụng tiếng Quảng Đông</p>
 <p>Chữ Quốc Ngữ tiếng Quảng Đông thông dụng đã tổng hợp đặc trưng của các loại giọng của tiếng Quảng, hình thành một chữ viết biểu âm có thể thể hiện và mô tả các loại giọng của tiếng Quảng, cũng bớt ảnh hưởng của hiện tượng từ đồng âm, cho những người nói các giọng của tiếng Quảng Đông ở khắp nơi một hệ thống chữ viết thung yụng <p>
   <p> The script of national language for Cantonese is a romanized Cantonese script aimed at developing a phonetic writing system for Cantonese, reduce the time of learning and writing of Cantonese, while strengthening the cohesion and self-identity among Cantonese speakers.</p>
@@ -62,12 +62,34 @@
  <p>The vowels pronounce "ô" in Canton city and Hong Kong accent while pronounce "ao" in Hoisan accent are spelled as "au"</p>
  <p>喺廣州音入面讀"âu"而係喺台山音入面讀"ưu"嘅韻腹寫成"ưu"</p>
  <p>The vowels pronounce "âu" in Canton city and Hong Kong accent while pronounce "ưu" in Hoisan accent are spelled as "ưu"</p>
+ <p>如果"ưu"韻腹前邊嘅韻首係"y",咁就唔使寫韻首，直程寫"ưu"就得，譬如話「優ưu」「幼ứu」「友ữu」「右ựu」</p>
+ <p>If the consonant before the vowel "ưu" is "y", then this consonant will be omitted, only "ưu" will be spelled, such as 「優ưu」「幼ứu」「友ữu」「右ựu」</p>
  <p>喺廣州音或者台山話入面讀"cui/kui" "khui" "hui" "ngui"嘅音寫成"cư/kư" "khư" "hư" "ngư"</p>
  <p>The syllable pronounced "cui/kui" "khui" "hui", ngui in Canton city and Hong Kong accent or Hoisan accent should be spelled as "cư/kư" "khư" "hư" "ngư"</p>
  <p>南寧音入面嘅[tʃɿ] [tʃʰɿ] [sɿ]嘅拼寫係"chu" "xu" "su"</p>
  <p>The [tʃɿ] [tʃʰɿ] and [sɿ] sounds in Namning accent are spelled as "chu" "xu" and "su"</p>
- <p>"iu" "im" "in" "ip" "it"組合用於取代"iêu" "iêm" "iên" "iêp" "iêt"當用嚟表示發音或者串唔係粵語詞源或者唔係漢越詞詞源嘅詞語，譬如話來自嘅英文嘅借詞「𨋢lip」「天拿水thin-nà sủi」，或者係借用漢字嚟表示詞語嘅發音但係字嘅意思同漢字本身嘅意思無關嘅字，譬如話「點解đỉm-cải」</p>
- <p>The "iu" "im" "in" "ip" "it" combiniation can be used to replace "iêu" "iêm" "iên" "iêp" "iêt" when representing sounds and spelling words without Cantonese origin and without sino-cantonese origin, for example loanword from English, such as "lip" and "thin-nà sủi", or in case of using chinese characters to represent sounds or a word but the meaning of the character is not linked with its origin meaning, such as "點解đỉm-cải"</p>
+ <p>"iu" "im" "in" "ip" "it" "ay"組合用於取代"iêu" "iêm" "iên" "iêp" "iêt" "ê"當用嚟表示發音或者串唔係粵語詞源或者唔係漢越詞詞源嘅詞語，譬如話來自嘅英文嘅借詞「𨋢lip」「天拿水thin-nà sủi」，或者係借用漢字嚟表示詞語嘅發音但係字嘅意思同漢字本身嘅意思無關嘅字，譬如話「點解đỉm-cải」「嚟lày」，或者表示發音嘅語氣詞,譬如話「哎áy」</p>
+ <p>The "iu" "im" "in" "ip" "it" "ay" combiniation can be used to replace "iêu" "iêm" "iên" "iêp" "iêt" "ê"when representing sounds and spelling words without Cantonese origin and without sino-cantonese origin, for example loanword from English, such as "lip" and "thin-nà sủi", or in case of using chinese characters to represent sounds or a word but the meaning of the character is not linked with its origin meaning, such as "點解đỉm-cải" "嚟lày", or interjections such as "哎áy"</p>
+ <p>ê同ay用嚟表示一於嘅發音，ê用嚟拼寫漢字詞源嘅字同有明確嘅詞源喺古音入面讀呢個韻腹嘅詞語，ay用嚟拼寫少部分嘅非漢字嘅詞語或者係漢字但係係由唔規則嘅音變產生出呢個讀音嘅字，譬如話「嚟lày」「睇thảy」「咪may」「咪mạy」「米may」「呢nay」「揮phay」「僞ngạy」「魏ngày」「危ngày」「矮ảy」「哎áy」「曳yay」「喺hảy」「使sảy」「费pháy」「沸pháy」</p>
+ <p>"ê" and "ay" are used to represent the same pronunciation. "ê" is used to spell sino-cantonese words and the words with clear etymology that pronounce this vowel in ancient time. "ay" is used to spell few non-sino-cantonese words and sino-cantonese words with irregular sound change, such as「嚟lày」「睇thảy」「咪may」「咪mạy」「米may」「呢nay」「揮phuy」「僞ngụy」「魏ngùy」「危ngùy」「矮ảy」「哎áy」「曳yay」「喺hảy」「使sảy」「费pháy」「沸pháy」</p> 
+ <p>y同ơi用嚟表示一於嘅發音，y用嚟拼寫有明確嘅詞源讀呢個韻腹嘅漢越詞或者純越詞，ơi用嚟拼寫冇韻首嘅單獨嘅音節譬如話「誒ợi」，同少部分嘅非漢字嘅詞語或者係漢字但係由不規則音變產生出嘅讀音，譬如話「嚟lời」，同用嚟表示外來語入面嘅呢個韻腹，譬如話「士多啤梨sị-đo-be-lởi」</p>
+ <p>"y" and "ơi" are used to represent the same pronunciation. "y" is used to spell native cantonese words and sino-cantonese words with clear etymology that should pronounce this vowel. "ơi" is used to spell the vowel without consonant, such as 「誒ợi」, and few native cantonese words and sino-cantonese words with irregular sound change, such as「嚟lời」, and representing this vowel in borrowed words, such as「士多啤梨sị-đo-be-lởi」</p>
+ <p>如果一個單獨嘅yi音嘅音節聲調係第1、2、3聲調，咁唔使寫後邊嘅i，譬如話「衣y」「倚ỷ」「意ỷ」</p>
+ <p>If a "yi" sound syllable has first, second, or third tone, the "i" behind can be removed, such as 「衣y」「倚ỷ」「意ỷ」</p>
+ <p>如果一個單獨嘅yi音嘅音節聲調係第4、5、6聲調，咁要寫yi，譬如話「移yì」「以yĩ」「易yị」</p>
+ <p>If a "yi" sound syllable has forth, fifth, or sixth tone, it should be spelled as "yi", such as 「移yì」「以yĩ」「易yị」</p>
+ <p>如果一個單獨嘅yư音嘅音節聲調係第1、2、3聲調，咁唔使寫前邊嘅y，譬如話「於ư」「傴ử」「淤ứ」</p>
+ <p>If a "yư" sound syllable has first, second, or third tone, the "i" behind can be removed, such as 「於ư」「傴ử」「淤ứ」</p>
+ <p>如果一個單獨嘅yư音嘅音節聲調係第4、5、6聲調，咁要寫yư，譬如話「輿yừ」「與yữ」「預yự」</p>
+ <p>If a "yư" sound syllable has forth, fifth, or sixth tone, it should be spelled as "yi", such as 「輿yừ」「與yữ」「預yự」</p>
+ <p>如果一個單獨嘅uy音嘅音節聲調係第4、5、6聲調，咁可以寫成vy，譬如話「為vỳ」「偉vỹ」「位vỵ」</p>
+ <p>If a "vy" sound syllable has forth, fifth, or sixth tone, it can be spelled as "vy", such as 「為vỳ」「偉vỹ」「位vỵ」</p>
+ <p>如果一個單獨嘅yiêt, yiên, yiêm音嘅音節聲調係第1、2、3聲調，咁唔使寫中間嘅i，譬如話「噎yết」「煙yên」「腌yêm」</p>
+ <p>If a "yiêt" "yiên" "yiêm" sound syllable has first, second, or third tone, the "i" in the middle can be removed, such as 「噎yết」「煙yên」「腌yêm」</p>
+ <p>如果"y" "ê" 嘅元音前邊冇韻首單獨出現，咁要寫"ơi" "ay"，譬如話「誒ợi」「哎áy」</p>
+ <p>If "y" and "ê" vowels appear without a consonant before, it should be spelled as "ơi" "ay", such as 「誒ợi」「哎áy」</p>
+ <p>如果"â"嘅元音後邊冇韻尾單獨出現，咁要寫"ơ"，譬如話「㗎cớ」「嘞lớ」</p>
+ <p>If "â" vowels appear without a consonant behind, the vowel should be spelled as "ơ", such as 「㗎cớ」「嘞lớ」</p>
  <h1>音調 Thanh Điệu tones</h1>
  <img src='tones.png' alt='Keyboard Layout'>
 
@@ -170,8 +192,8 @@
    <tr>
      <td>6 (low falling)</td>
      <td>j</td>
-     <td>hai<strong>j</strong></td>
-     <td>hạy係
+     <td>hee<strong>j</strong></td>
+     <td>hệ係
      </td>
    </tr>
    <tr>
@@ -231,7 +253,7 @@
  <p> tap Z key to remove tonations  <p>
 
 
-  <a href="https://github.com/Cathaylaboratory/quokyuzi/blob/main/oatnguquocnguti.yaml">Dictionary for the script of National Language universal version Quóc Ngữ Tị粵語國語字字典總合通用版</a>
+  <a href="https://github.com/Cathaylaboratory/quokyuzi/blob/main/oatnguquocnguti.yaml">Dictionary for the script of National Language universal version Quóc Ngữ Tị大粤國音字匯－粵語國語字字典總合通用版</a>
   <p></p>
   <a href="https://github.com/Cathaylaboratory/quokyuzi/blob/main/quocyuchiquongchauyam.dic.yaml">Dictionary for the script of National Language for Hong Kong and Canton city accent Quóc Yữ Chị粵語國語字字典香港同廣州音</a>
   <p></p>
@@ -242,13 +264,13 @@
   <a href="https://github.com/Cathaylaboratory/quokyuzi/blob/main/quocyuchinamninhva.yaml">Dictionary for the script of National Language for Namning accent Quóc Yữ Chị粵語國語字字典南寧音</a>
   <p></p>
   <p>粵語國語字通用版本係一種收納咗多種粵語口音發音嘅粵語文字，粵語國語字通用版本嘅使用同粵語國語字嘅廣州音、台山音、南寧音、欽州音等等粵語口音嘅版本嘅使用之間唔衝突</p>
-  <p>Oạt Ngữ Quóc Ngữ Tị thung yụng bản bổn hạy yât chủng sưu-nạp chỏ đo-chủng Oạt Ngữ hẩu yâm ké Oạt-Ngữ mần-tị, Oạt Ngữ Quóc Ngữ Tị thung yụng bản bổn ké sỉ-yụng thùng Oạt Ngữ Quóc Ngữ Tị ké Quỏng Châu yâm, Thòi San yâm, Nàm Nình Yâm, Yâm Châu yâm đ.đ. Oạt Ngữ hẩu yâm ké bản-bổn ké sỉ-yụng m̀ trung-đật </p>
+  <p>Oạt Ngữ Quóc Ngữ Tị thung yụng bản bổn hệ yât chủng sưu-nạp chỏ đo-chủng Oạt Ngữ hẩu yâm ké Oạt-Ngữ mần-tị, Oạt Ngữ Quóc Ngữ Tị thung yụng bản bổn ké sỉ-yụng thùng Oạt Ngữ Quóc Ngữ Tị ké Quỏng Châu yâm, Thòi San yâm, Nàm Nình Yâm, Yâm Châu yâm đ.đ. Oạt Ngữ hẩu yâm ké bản-bổn ké sỉ-yụng m̀ trung-đật </p>
   <p>The universal version of Script of Nation Language of Cantonese is a Cantonese script gathered various of Cantonese accents and dialects, the uses of the universal version of Script of Nation Language of Cantonese is not conflict with the use of the Script of Nation Language of Cantonese for cantonese accents, such as Hong Kong and Canton city accent, Hoisan accent, Namning accent and Yamchow accent.</p>
   <p></p>
 <p>範文：南國山河</p>
 <p>Nàm Quóc San Hò</p>
 <p>南國山河南帝居</p> 
-<p>Nàm Quóc San Hò Nàm Đáy Cư</p>
+<p>Nàm Quóc San Hò Nàm Đế Cư</p>
 <p>截然定分在天書</p>
 <p>Tiệt Nhiền Định Phân Tọi Thiên Sư</p>
 <p>如何逆虜來侵犯</p> 
