Opted in touch screen support. Updated read me and description to point to Gboard.

--- a/release/l/lavanya/source/readme.htm
+++ b/release/l/lavanya/source/readme.htm
@@ -15,7 +15,7 @@
 
 <h1>lAvaNya Keyboard</h1>
 
-<p>This custom Telugu keyboard is inspired by Lekhini, a browser-based transliteration tool. It was created to overcome Lekhini’s limitation of working only within a browser. Most of the character mappings from Lekhini have been faithfully replicated, with a few exceptions. The layout was designed by Prashanth in 2025 to help his mother, who is already familiar with Lekhini.</p>
+<p>This custom Telugu keyboard is inspired by Lekhini, a browser-based transliteration tool. It was created to overcome Lekhini’s limitation of working only within a browser. Most of the character mappings from Lekhini have been faithfully replicated, with a few exceptions. The layout was designed by Prashanth in 2025 to help his mother, who is already familiar with Lekhini. While Lavanya offers touch screen support, its not matured yet. Google's Gboard is an excellent keyboard for typing in Telugu on touchscreen devices.</p>
 
 <p>Refer to the doucmentation file for comprehensive reference.</p>
 <h2>Supported Platforms</h2>
